[workspace]
members = [
    "0001.two-sum.rust",
    "0002.add-two-numbers.rust",
    "0003.length-of-longest-substring.rust",
    "0004.median-of-two-sorted-arrays.rust",
    "0005.longest-palindromic-substring.rust",
    "0006.zigzag-conversion.rust",
    "0007.reverse-integer.rust",
    "0008.string-to-integer-atoi.rust",
    "0009.palindrome-number.rust",
    "0010.regular-expression-matching.rust",
    "0011.container-with-most-water.rust",
    "0012.integer-to-roman.rust",
    "0013.roman-to-integer.rust",
    "0014.longest-common-prefix.rust",
    "0015.3sum.rust",
    "0016.3sum-closest.rust",
    "0017.letter-combinations-of-a-phone-number.rust",
    "0018.4sum.rust",
    "0019.remove-nth-node-from-end-of-list.rust",
    "0020.valid-parentheses.rust",
    "0021.merge-two-sorted-lists.rust",
    "0022.generate-parentheses.rust",
    "0023.merge-k-sorted-lists.rust",
    "0024.swap-nodes-in-pairs.rust",
    "0025.reverse-nodes-in-k-group.rust",
    "0026.remove-duplicates-from-sorted-array.rust",
    "0027.remove-element.rust",
]
